tests/aster/x/mochi/rosetta/faulhabers-formula.error
error[A002]: type mismatch for res: bigint vs int
  --> /workspace/mochi/tests/rosetta/x/Mochi/faulhabers-formula.mochi:20:3

 20 |   var res: bigint = 1
    |   ^

help:
  Ensure res matches
